# farischebib.is

./: .gitignore  .pre-commit-config.yaml  CNAME  Gemfile  README.md  _config.yml  about.md  index.html  mapping-the-abstract-syntax-tree-of-leadership.md  params.json  pelicanconf.py  publishconf.py  requirements.txt  resume.md  status.xml
.github/workflows/: ci.yaml
.sass-cache/5ece7b465612ea01af2774d5cf207ec1a8d4898d/: _functions.scssc  _mixins.scssc  _skel.scssc  _vars.scssc
.well-known/: keybase.txt
_includes/: analog_gallery.html  art.html  blog_by_category.html  blog_dropdown.html  category.html  footer.html  front_head.html  head.html  header.html
_layouts/: default.html  page.html  post.html
_posts/: 2016-12-03-a-blog-together.md  2016-12-04-red-bull.md  2017-02-23-your-password-sucks.md  2023-06-21-intro-lead.md
_sass/: _base.scss__
_site/: feed.xml  index.html
assets/js/: index.js  jquery.fitvids.js  readingTime.min.js
capturing/: index.html
capturing/_posts/: 2016-12-04-red-bull.md
content/: bootingup.md
css/: front.css
css/css/: main.sass  print.css
flying/: index.html
flying/_posts/: 2016-12-04-landing.md
for-hire/: index.html
hacking/: index.html  index_back.html
hacking/_posts/: 2017-04-11-your-password-sucks.md
leading/: index.html
scripts/: webify_imgs.py
scripts/webify/: pyproject.toml
scripts/webify/tests/: test_image_processing.py  test_s3_upload.py
scripts/webify/util/: image_processing.py  s3_upload.py
scripts/webify/webify/: main.py
scripts/webify/webify/tests/: test_image_processing.py
(+13 files in other folders)
